Added about and potential fix to problem with about page not showing on mobile.

--- a/org/troikagame/troikagame/templates/about.html
+++ b/org/troikagame/troikagame/templates/about.html
@@ -12,7 +12,10 @@
       <ul class="nav nav-list" data-spy="scroll" data-target=".nav">
         <li class="nav-header">Contents</li>
         <li><a href="#general">What is Troika Game?</a></li>
-        <li><a href="#use">How does Troika Game work?</a></li>
+        <li><a href="#learn">Ready to start learning? Join a Troika!</a></li>
+        <li><a href="#teach">Ready to start teaching? Set up your own Troika!</a></li>
+        <li><a href="#we">Who are we?</a></li>
+        <li><a href="#contact">Contact us</a></li>
       </ul>
     </div>
     <div class="span8">
@@ -20,34 +23,108 @@
         <div class="page-header">
           <h3>What is Troika Game?</h3>
         </div>
-        <p>Do you know what the person next to you wants to teach? If you knew, 
-           would you be able to arrange a session where the person could pass their 
-           knowledge? And if that happened, would you meet the person alone or could 
-           the knowledge be useful to more people? The biggest question to answer 
-           is the question of taking the first step. These are the questions that are 
-           preventing us from learning small things from each other: how to mend a 
-           bicycle, how to use a spreadsheet program, how to juggle etc. Small things 
-           that could make life easier and take very little time.</p>
-        <p>Troika is a method and a tool to answer these questions and overcome the 
-           simple - but demanding - obstacles in peer-to-peer learning and knowledge 
-           creation. Troika offers a platform where people can arrange a learning session
-           and a way to communicate this session forward to other people interested in the 
-           matter. The purpose of Troika is make these things possible with the minimum
-           level of organization. A troika will happen and will be considered a great
-           success when three people gather.</p>
-        <p>Integral part of Troika is the recognition of effort. This happens through small 
-           and non-intrusive elements of game: badges and rewards. Hence the name Troika 
-           the Game!</p>
+        <p>Do you know what the person next to you wants to teach? What 
+        would be the funniest way to share this knowledge to you and
+        other people ? Troika the Game is a tool developed for you to
+        make learning together possible with just the right people
+        around you. Troika helps you to easily organize a session for 
+        learning and passing the knowledge on.</p>
+        <p>Why do we need Troika for learning together? The biggest 
+        obstacle in sharing our knowledge is often to take the first step. 
+        Troubles in taking the first steps prevent us from learning small 
+        things from each other: how to mend a bicycle, how to use a 
+        spreadsheet program - how to juggle? Small things that could make 
+        life easier and take very little time.</p>
+        <p>Troika is a method and a tool to answer these questions and 
+        overcome the simple - but demanding - obstacles in peer-to-peer 
+        learning and knowledge creation. Troika offers 1) a platform 
+        where people can arrange a learning session and 2) a way to 
+        communicate this session forward to other people interested in 
+        the topic. The purpose of Troika is to make these things possible 
+        with the minimum level of organization. A “troika” means a clique 
+        of three. When three people gather together at Troika event, 
+        the organized Troika will be considered as a great success!</p>
+        <p>What makes Troika truly a lot of fun is the recognition of effort. 
+        This happens through small and non-intrusive elements of game: badges 
+        and rewards. Hence the name Troika Game!</p>
+        <p>Troika builds on three simple premises:
+          <ul>
+              <li>You will fill a gap between people who know something and 
+                  people who want to learn something.</li>
+              <li>You will engage a minimum of two (2) people.</li>
+              <li>You will talk about troika (Spread the word, advertise the
+              Troika event and share the spirit).</li>
+          </ul>
+        </p>
+        <p><b>Troika is not limited to any certain subject areas. We all know 
+        something worth teaching - think out of the box!</b></p>
       </section>
-      <section id="use" class="tg-anchor">
+      <section id="learn" class="tg-anchor">
         <div class="page-header">
-          <h3>How does Troika Game work?</h3>
+          <h3>Ready to start learning? Join a Troika!</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
-        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. </p>
-        <p>Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus. </p>
-        <p>Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. </p>
-        <p>Cras metus. Sed aliquet risus a tortor. Integer id quam. Morbi mi. Quisque nisl felis, venenatis tristique, dignissim in, ultrices sit amet, augue. Proin sodales libero eget ante. Nulla quam. Aenean laoreet. Vestibulum nisi lectus, commodo ac, facilisis ac, ultricies eu, pede. Ut orci risus, accumsan porttitor, cursus quis, aliquet eget, justo. Sed pretium blandit orci. Ut eu diam at pede suscipit sodales. </p>
+        <p>
+          <ol>
+            <li>Register as a user.</li>
+            <li>Browse the list of active troika-events on the front page and 
+                find the ones you’re interested in. -> If there is no troika 
+                available on the topic you wish to learn, you may want set up 
+                your own “pending troika” and request for a teacher.</li>
+            <li>Sign up for an interesting troika by clicking “Join” on the 
+                Troika description page.</li>
+            <li>Attend the troika and enjoy the experience of learning!</li>
+            <li>Gain your badges and review.</li>
+            <li>Recommend Troika to your friends and acquaintances.</li>
+          </ol>
+        </p>
+      </section>
+      <section id="learn" class="tg-anchor">
+        <div class="page-header">
+          <h3>Ready to start teaching? Set up your own Troika!</h3>
+        </div>
+        <p>
+          <ol>
+            <li>Register as a user.</li>
+            <li>Find a topic you wish to teach or a topic you want somebody to
+                teach you to.</li>
+            <li>Create a new pending troika here!</li>
+            <li>Wait for the first two to join your troika.</li>
+            <li>Agree on the time and place and click XXX to make the troika
+                active and publicly available.</li>
+            <li>Attend the troika and enjoy the experience of learning!</li>
+            <li>Gain your badges and reviews.</li>
+            <li>Recommend Troika to your friends and acquaintances.</li>
+          </ol>
+        </p>
+      </section>
+      <section id="we" class="tg-anchor">
+        <div class="page-header">
+          <h3>Who are we?</h3>
+        </div>
+        <p>Troika is the brain child of Olli Parviainen, Petro Poutanen and 
+        Salla Laaksonen. This site was developed by Timo Tiuraniemi.</p>
+        <p>Troika Game website is part of the Extended Mind family of software tools. 
+          Troika Game and Extended Mind are open source software developed under
+          <a href="http://www.gnu.org/licenses/agpl-3.0.html" target="_blank">
+          Affero GNU Public Licence v3</a>.
+          Get the source code <a href="https://github.com/ttiurani/extendedmind" target="_blank">
+          here</a>.
+        </p>
+        <p>Development of Troika Game is sponsored by 
+           <a href="http://www.verkostoanatomia.fi/" target="_blank">Verkostoanatomia</a> and
+           <a href="http://www.filosofianakatemia.fi/" target="_blank">Filosofian Akatemia</a>. 
+        </p>
+      </section>
+      <section id="contact" class="tg-anchor">
+        <div class="page-header">
+          <h3>Contact us</h3>
+        </div>
+        <p>For general questions about Troika, send an email to
+          <a href="mailto:verkostoanatomia@gmail.com">verkostoanatomia@gmail.com</a>.
+        </p>
+        <p>For questions about this site, send an email to 
+          <a href="mailto:webmaster@troikagame.org">webmaster@troikagame.org</a>.
+        </p>
       </section>
     </div>
   </div>
