Added date to the front page and some layout.

--- a/org/troikagame/troikagame/templates/edit_troika.html
+++ b/org/troikagame/troikagame/templates/edit_troika.html
@@ -36,7 +36,7 @@
           <dt>{{ troikaform.max_participants.label }} {{ troikaform.max_participants(class="tg-integer") }}</dt>
           {% if access == 'create' %}
           <dt>{{ troikaform.creator_is_teacher.label }} {{ troikaform.creator_is_teacher(class="tg-checkbox") }}</dt>
-          <h6>Check this box if you will be
+          <h6 class="tg-input-description">Check this box if you will be
           the teacher for this troika. If the teacher is
           someone else, you can appoint them later on.</h6>
           <dt>
