--- a/org/troikagame/troikagame/static/css/tg.less
+++ b/org/troikagame/troikagame/static/css/tg.less
@@ -38,3 +38,25 @@ body {
 .tg-integer {
   width: 2em;
 }
+
+ul.tg-troika-headers {
+  list-style-image: none;
+  list-style-type: none;
+  margin-left: 0;
+}
+
+li.tg-troika-header {
+  border: 1px solid #E5E5E5;
+  padding: 8px 8px 8px 8px;
+  margin-top: 0.5em;
+}
+
+.accordion-inner {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  padding-bottom: 0;
+}
+
+.tg-input-description {
+  margin-top:0;
+}
