--- a/org/troikagame/troikagame/templates/about.html
+++ b/org/troikagame/troikagame/templates/about.html
@@ -37,10 +37,10 @@
         life easier and take very little time.</p>
         <p>Troika is a method and a tool to answer these questions and 
         overcome the simple - but demanding - obstacles in peer-to-peer 
-        learning and knowledge creation. Troika offers 1) a platform 
-        where people can arrange a learning session and 2) a way to 
-        communicate this session forward to other people interested in 
-        the topic. The purpose of Troika is to make these things possible 
+        learning and knowledge creation. Troika offers
+        <ol><li>a platform where people can arrange a learning session and</li>
+        <li>a way to communicate this session forward to other people interested in 
+        the topic.</li></ol>The purpose of Troika is to make these things possible 
         with the minimum level of organization. A “troika” means a clique 
         of three. When three people gather together at Troika event, 
         the organized Troika will be considered as a great success!</p>
@@ -65,13 +65,15 @@
         </div>
         <p>
           <ol>
-            <li>Register as a user.</li>
-            <li>Browse the list of active troika-events on the front page and 
-                find the ones you’re interested in. -> If there is no troika 
-                available on the topic you wish to learn, you may want set up 
-                your own “pending troika” and request for a teacher.</li>
-            <li>Sign up for an interesting troika by clicking “Join” on the 
-                Troika description page.</li>
+            <li><a href="{{ url_for('login') }}" target="_blank">Register</a> as a user.</li>
+            <li><a href="{{ url_for('troikas') }}" target="_blank">Browse</a> the list of active troika-events 
+                on the front page and find the ones you’re interested in. If there is no troika 
+                available on the topic you wish to learn, you may want 
+                <a href="{{ url_for('create_troika') }}" target="_blank">
+                set up your own “pending troika”</a> and leave to "I will teach this" unclicked
+                to request for a teacher.</li>
+            <li>Sign up for an interesting troika by clicking the appropriate join link 
+                on the troika description page.</li>
             <li>Attend the troika and enjoy the experience of learning!</li>
             <li>Gain your badges and review.</li>
             <li>Recommend Troika to your friends and acquaintances.</li>
@@ -84,12 +86,13 @@
         </div>
         <p>
           <ol>
-            <li>Register as a user.</li>
+            <li><a href="{{ url_for('login') }}" target="_blank">Register</a> as a user.</li>
             <li>Find a topic you wish to teach or a topic you want somebody to
                 teach you to.</li>
-            <li>Create a new pending troika here!</li>
+            <li><a href="{{ url_for('create_troika') }}" target="_blank">Create</a> a new 
+                pending troika!</li>
             <li>Wait for the first two to join your troika.</li>
-            <li>Agree on the time and place and click XXX to make the troika
+            <li>Agree on the time and place and click "Activate troika" to make the troika
                 active and publicly available.</li>
             <li>Attend the troika and enjoy the experience of learning!</li>
             <li>Gain your badges and reviews.</li>
