--- a/org/troikagame/troikagame/templates/troika.html
+++ b/org/troikagame/troikagame/templates/troika.html
@@ -8,7 +8,7 @@
 </div>
 {% if troika.access %}
 <div class="pagination-centered">
-  <a href="{{ url_for('edit_troika', troika_id=troika.id) }}"><h4>Edit Troika</h4></a>
+  <a href="{{ url_for('edit_troika', troika_id=troika.id) }}"><h4>Edit troika</h4></a>
 </div>
 {% endif %}
 <div class="container-fluid">
@@ -93,7 +93,7 @@
 </div>
 {% if troika.activate %}
 <div class="pagination-centered">
-  <a href="{{ url_for('activate_troika', troika_id=troika.id) }}"><h4>Activate Troika</h4></a>
+  <a href="{{ url_for('activate_troika', troika_id=troika.id) }}"><h4>Activate troika</h4></a>
 </div>
 {% endif %}
        
