Small bug fixes here and there.

--- a/org/troikagame/troikagame/templates/about.html
+++ b/org/troikagame/troikagame/templates/about.html
@@ -104,8 +104,8 @@
         <div class="page-header">
           <h3>Who are we?</h3>
         </div>
-        <p>Troika is the brain child of Olli Parviainen, Petro Poutanen and 
-        Salla Laaksonen. This site was developed by Timo Tiuraniemi.</p>
+        <p>Troika is the brain child of Olli Parviainen, Petro Poutanen, 
+        Salla Laaksonen and Timo Tiuraniemi who also developed this site.</p>
         <p>Troika Game website is part of the Extended Mind family of software tools. 
           Troika Game and Extended Mind are open source software developed under
           <a href="http://www.gnu.org/licenses/agpl-3.0.html" target="_blank">
