--- a/org/troikagame/troikagame/templates/edit_troika.html
+++ b/org/troikagame/troikagame/templates/edit_troika.html
@@ -61,7 +61,8 @@
 <script src="{{ url_for('static',filename='bootstrap/ext/datepicker/bootstrap-datepicker.js') }}"></script>
 <script type=text/javascript>
   $('#troika-start_date').datepicker({
-    format: 'yyyy-mm-dd'
+    format: 'yyyy-mm-dd',
+    weekStart: 1
 });
 </script>
 {% endblock %}
