Added rest of layout

--- a/org/troikagame/troikagame/templates/about.html
+++ b/org/troikagame/troikagame/templates/about.html
@@ -113,7 +113,7 @@
           Get the source code <a href="https://github.com/ttiurani/extendedmind" target="_blank">
           here</a>.
         </p>
-        <p>Development of Troika Game is sponsored by 
+        <p>Development of Troika Game is supported by 
            <a href="http://www.verkostoanatomia.fi/" target="_blank">Verkostoanatomia</a> and
            <a href="http://www.filosofianakatemia.fi/" target="_blank">Filosofian Akatemia</a>. 
         </p>
@@ -123,7 +123,7 @@
           <h3>Contact us</h3>
         </div>
         <p>For general questions about Troika, send an email to
-          <a href="mailto:verkostoanatomia@gmail.com">verkostoanatomia@gmail.com</a>.
+          <a href="mailto:info@troikagame.org">info@troikagame.org</a>.
         </p>
         <p>For questions about this site, send an email to 
           <a href="mailto:webmaster@troikagame.org">webmaster@troikagame.org</a>.
