--- a/org/troikagame/troikagame/templates/troikas.html
+++ b/org/troikagame/troikagame/templates/troikas.html
@@ -21,7 +21,7 @@
               <a href="#tg-active-collapse" data-toggle="collapse" data-parent="#tg-active-accordion">
               <h3>Active Troikas</h3>
               </a>
-              <h6>Upcoming troikas you can join:</h6> 
+              <h6>Upcoming troikas you can join.</h6> 
             </div>
           </div>
           <div id="tg-active-collapse" class="accordion-body collapse in">
@@ -52,10 +52,7 @@
               <a data-toggle="collapse" data-parent="#tg-pending-accordion" href="#tg-pending-collapse">
               <h3>Pending Troikas</h3>
               </a>
-              <h6>Suggested troikas not yet activated. It might be
-                  because they don't yet have the minimum of
-                  three participants or the troika details have not
-                  been agreed on, so check if you can help!</h6> 
+              <h6>Suggested troikas not yet activated. Check if you can help!</h6> 
             </div>
           </div>
           <div id="tg-pending-collapse" class="accordion-body collapse in">
