--- a/org/troikagame/troikagame/templates/macros.html
+++ b/org/troikagame/troikagame/templates/macros.html
@@ -1,7 +1,7 @@
 {% macro heading(caller) %}
 <div class="tg-heading">
   <h1>Troika Game</h1>
-  <p>Do you know what the person next to you wants to teach?</p>
+  <p>Do you know what you could learn from the person next to you?<br/>We do.</p>
 </div>
 {% endmacro %}
 
