--- a/org/troikagame/troikagame/templates/troika.html
+++ b/org/troikagame/troikagame/templates/troika.html
@@ -14,6 +14,10 @@
 <div class="pagination-centered">
   <a href="{{ url_for('login', troika_id=troika.id) }}"><h5>Login or register to join troika!</h5></a>
 </div>
+{% elif session.logged_in and troika.is_full and not troika.phase == 'complete' %}
+<div class="pagination-centered">
+  <h5>This troika is currently full.</h5></a>
+</div>
 {% endif %}
 <div class="container-fluid">
   <div class="row-fluid">
