--- a/org/troikagame/troikagame/templates/macros.html
+++ b/org/troikagame/troikagame/templates/macros.html
@@ -1,6 +1,6 @@
 {% macro heading(caller) %}
 <div class="tg-heading">
-  <h1>Troika Game</h1>
+  <img class="tg-logo" src="{{ url_for('static', filename='img/logo.png') }}"></img>
   <p>Do you know what you could learn from the person next to you?<br/>We do.</p>
 </div>
 {% endmacro %}
