--- a/org/troikagame/troikagame/templates/troika.html
+++ b/org/troikagame/troikagame/templates/troika.html
@@ -36,10 +36,10 @@
     </div>
     <div class="span4 tg-group">
       <div class="span12">
-        <h3>Teacher</h3> 
+        <h3>Lead</h3> 
         {% if (troika.teacher == None and session.logged_in and not troika.participating) %}
           <a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=0) }}">
-          Teach this Troika
+          Lead this Troika
           </a>
         {% else %}
           {{ troika.teacher }}
