--- a/org/troikagame/troikagame/templates/macros.html
+++ b/org/troikagame/troikagame/templates/macros.html
@@ -1,7 +1,7 @@
 {% macro heading(caller) %}
 <div class="tg-heading">
   <img class="tg-logo" src="{{ url_for('static', filename='img/logo.png') }}"></img>
-  <p>Do you know what you could learn from the person next to you?<br/>We do.</p>
+  <p>Do you know what you could learn from the person next to you?</p>
 </div>
 {% endmacro %}
 
