Changed teacher_id to lead_id and handle to alias everywhere

--- a/org/troikagame/troikagame/templates/edit_troika.html
+++ b/org/troikagame/troikagame/templates/edit_troika.html
@@ -35,7 +35,7 @@
           <dt>{{ troikaform.duration.label }} {{ troikaform.duration(class="tg-integer") }}</dt>
           <dt>{{ troikaform.max_participants.label }} {{ troikaform.max_participants(class="tg-integer") }}</dt>
           {% if access == 'create' %}
-          <dt>{{ troikaform.creator_is_teacher.label }} {{ troikaform.creator_is_teacher(class="tg-checkbox") }}</dt>
+          <dt>{{ troikaform.creator_is_lead.label }} {{ troikaform.creator_is_lead(class="tg-checkbox") }}</dt>
           <h6 class="tg-input-description">Check this box if you will lead this troika. If you need someone 
 		else to lead, leave this box unchecked.</h6>
           <dt>
