--- a/org/troikagame/troikagame/templates/macros.html
+++ b/org/troikagame/troikagame/templates/macros.html
@@ -29,7 +29,7 @@
     <dt>{{ form.hidden_tag() }}</dt>
     <dt>{{ form.first_name.label }} {{ form.first_name() }}</dt>
     <dt>{{ form.last_name.label }} {{ form.last_name() }}</dt>
-    <dt>{{ form.handle.label }} {{ form.handle() }}
+    <dt>{{ form.alias.label }} {{ form.alias() }}
         {% call handle_description() %} {% endcall %}
     </dt>
     <dt>{{ form.email.label }} {{ form.email() }}</dt>
@@ -48,7 +48,7 @@
     <dt>{{ form.hidden_tag() }}</dt>
     <dt>{{ form.first_name.label }} {{ form.first_name() }}</dt>
     <dt>{{ form.last_name.label }} {{ form.last_name() }}</dt>
-    <dt>{{ form.handle.label }} {{ form.handle() }}</dt>
+    <dt>{{ form.alias.label }} {{ form.alias() }}</dt>
         {% call handle_description() %} {% endcall %}
     <dt>{{ form.email.label }} {{ form.email() }}</dt>
     <dt>{{ form.new_password.label }} {{ form.new_password() }}</dt>
