--- a/org/troikalearning/troikalearning/templates/about.html
+++ b/org/troikalearning/troikalearning/templates/about.html
@@ -11,7 +11,7 @@
     <div class="span4 tg-group">
       <ul class="nav nav-list" data-spy="scroll" data-target=".nav">
         <li class="nav-header">Contents</li>
-        <li><a href="#general">What is Troika Game?</a></li>
+        <li><a href="#general">What is Troika?</a></li>
         <li><a href="#learn">Ready to start learning? Join a Troika!</a></li>
         <li><a href="#share">Ready to start sharing? Set up your own Troika!</a></li>
         <li><a href="#we">Who are we?</a></li>
@@ -21,11 +21,11 @@
     <div class="span8">
       <section id="general" class="tg-anchor">
         <div class="page-header">
-          <h3>What is Troika Game?</h3>
+          <h3>What is Troika?</h3>
         </div>
         <p>Do you know what you could learn from the person next to you? What 
         would be the funniest way to share this knowledge to you and
-        other people? Troika the Game is a tool developed for you to
+        other people? Troika is a tool developed for you to
         make learning together possible with just the right people
         around you. Troika helps you to easily organize a session for 
         learning and passing the knowledge on.</p>
@@ -44,9 +44,6 @@
         with the minimum level of organization. A “troika” means a clique 
         of three. When three people gather together at Troika event, 
         the organized Troika will be considered as a great success!</p>
-        <p>What makes Troika truly a lot of fun is the recognition of effort. 
-        This happens through small and non-intrusive elements of game: badges 
-        and rewards. Hence the name Troika Game!</p>
         <p>Troika builds on three simple premises:
           <ul>
               <li>You will fill a gap between people who know something and 
@@ -106,14 +103,14 @@
         </div>
         <p>Troika is the brain child of Olli Parviainen, Petro Poutanen, 
         Salla Laaksonen and Timo Tiuraniemi who also developed this site.</p>
-        <p>Troika Game website is part of the Extended Mind family of software tools. 
-          Troika Game and Extended Mind are open source software developed under
+        <p>Troika website is part of the Extended Mind family of software tools. 
+          Troika and Extended Mind are open source software developed under
           <a href="http://www.gnu.org/licenses/agpl-3.0.html" target="_blank">
           Affero GNU Public Licence v3</a>.
           Get the source code <a href="https://github.com/ttiurani/extendedmind" target="_blank">
           here</a>.
         </p>
-        <p>Development of Troika Game is supported by 
+        <p>Development of Troika is supported by 
            <a href="http://www.verkostoanatomia.fi/" target="_blank">Verkostoanatomia</a> and
            <a href="http://www.filosofianakatemia.fi/" target="_blank">Filosofian Akatemia</a>. 
         </p>
@@ -123,10 +120,10 @@
           <h3>Contact us</h3>
         </div>
         <p>For general questions about Troika, send an email to
-          <a href="mailto:info@troikagame.org">info@troikagame.org</a>.
+          <a href="mailto:info@troikalearning.org">info@troikalearning.org</a>.
         </p>
         <p>For questions about this site, send an email to 
-          <a href="mailto:webmaster@troikagame.org">webmaster@troikagame.org</a>.
+          <a href="mailto:webmaster@troikalearning.org">webmaster@troikalearning.org</a>.
         </p>
       </section>
     </div>
